<resources>
    <string name="app_name">InClass13</string>
    <string name="login">Login</string>
    <string name="newUser">New User?</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="paswd">Password</string>
    <string name="ConformPaswrd">Confirm Password</string>
    <string name="fromLabel">From:</string>
    <string name="sendButton">Send</string>
    <string name="enter_message_here">Enter message</string>
</resources>
